// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`compares multiple bundles > base 1`] = `
[
  {
    "brotli": 11,
    "bundle": "app",
    "files": [
      {
        "brotli": 11,
        "filename": "dist/app/app.js",
        "gzip": 24,
        "size": 100,
      },
    ],
    "gzip": 24,
    "id": "app",
    "size": 100,
  },
  {
    "brotli": 11,
    "bundle": "lib",
    "files": [
      {
        "brotli": 11,
        "filename": "dist/lib/lib.js",
        "gzip": 24,
        "size": 200,
      },
    ],
    "gzip": 24,
    "id": "lib",
    "size": 200,
  },
]
`;

exports[`compares multiple bundles > compare 1`] = `
[
  {
    "brotli": {
      "difference": 0,
      "newSize": 11,
      "oldSize": 11,
    },
    "gzip": {
      "difference": 0,
      "newSize": 24,
      "oldSize": 24,
    },
    "id": "app",
    "name": "app",
    "newFiles": [
      {
        "brotli": 11,
        "filename": "dist/app/app.js",
        "gzip": 24,
        "size": 110,
      },
    ],
    "oldFiles": [
      {
        "brotli": 11,
        "filename": "dist/app/app.js",
        "gzip": 24,
        "size": 100,
      },
    ],
    "raw": {
      "difference": 10,
      "newSize": 110,
      "oldSize": 100,
    },
    "status": "updated",
  },
  {
    "brotli": {
      "difference": 0,
      "newSize": 11,
      "oldSize": 11,
    },
    "gzip": {
      "difference": 0,
      "newSize": 24,
      "oldSize": 24,
    },
    "id": "lib",
    "name": "lib",
    "newFiles": [
      {
        "brotli": 11,
        "filename": "dist/lib/lib.js",
        "gzip": 24,
        "size": 180,
      },
    ],
    "oldFiles": [
      {
        "brotli": 11,
        "filename": "dist/lib/lib.js",
        "gzip": 24,
        "size": 200,
      },
    ],
    "raw": {
      "difference": -20,
      "newSize": 180,
      "oldSize": 200,
    },
    "status": "updated",
  },
]
`;

exports[`compares multiple bundles > current 1`] = `
[
  {
    "brotli": 11,
    "bundle": "app",
    "files": [
      {
        "brotli": 11,
        "filename": "dist/app/app.js",
        "gzip": 24,
        "size": 110,
      },
    ],
    "gzip": 24,
    "id": "app",
    "size": 110,
  },
  {
    "brotli": 11,
    "bundle": "lib",
    "files": [
      {
        "brotli": 11,
        "filename": "dist/lib/lib.js",
        "gzip": 24,
        "size": 180,
      },
    ],
    "gzip": 24,
    "id": "lib",
    "size": 180,
  },
]
`;

exports[`detects added bundle via config change > base 1`] = `
[
  {
    "brotli": 11,
    "bundle": "app",
    "files": [
      {
        "brotli": 11,
        "filename": "dist/app/app.js",
        "gzip": 24,
        "size": 100,
      },
    ],
    "gzip": 24,
    "id": "app",
    "size": 100,
  },
]
`;

exports[`detects added bundle via config change > compare 1`] = `
[
  {
    "brotli": {
      "difference": 0,
      "newSize": 11,
      "oldSize": 11,
    },
    "gzip": {
      "difference": 0,
      "newSize": 24,
      "oldSize": 24,
    },
    "id": "app",
    "name": "app",
    "newFiles": [
      {
        "brotli": 11,
        "filename": "dist/app/app.js",
        "gzip": 24,
        "size": 100,
      },
    ],
    "oldFiles": [
      {
        "brotli": 11,
        "filename": "dist/app/app.js",
        "gzip": 24,
        "size": 100,
      },
    ],
    "raw": {
      "difference": 0,
      "newSize": 100,
      "oldSize": 100,
    },
    "status": "updated",
  },
  {
    "brotli": {
      "difference": 11,
      "newSize": 11,
      "oldSize": 0,
    },
    "gzip": {
      "difference": 24,
      "newSize": 24,
      "oldSize": 0,
    },
    "id": "lib",
    "name": "lib",
    "newFiles": [
      {
        "brotli": 11,
        "filename": "dist/lib/lib.js",
        "gzip": 24,
        "size": 200,
      },
    ],
    "oldFiles": [],
    "raw": {
      "difference": 200,
      "newSize": 200,
      "oldSize": 0,
    },
    "status": "added",
  },
]
`;

exports[`detects added bundle via config change > current 1`] = `
[
  {
    "brotli": 11,
    "bundle": "app",
    "files": [
      {
        "brotli": 11,
        "filename": "dist/app/app.js",
        "gzip": 24,
        "size": 100,
      },
    ],
    "gzip": 24,
    "id": "app",
    "size": 100,
  },
  {
    "brotli": 11,
    "bundle": "lib",
    "files": [
      {
        "brotli": 11,
        "filename": "dist/lib/lib.js",
        "gzip": 24,
        "size": 200,
      },
    ],
    "gzip": 24,
    "id": "lib",
    "size": 200,
  },
]
`;

exports[`detects added file between baseline and current > base 1`] = `
[
  {
    "brotli": 11,
    "bundle": "app",
    "files": [
      {
        "brotli": 11,
        "filename": "dist/app.js",
        "gzip": 24,
        "size": 50,
      },
    ],
    "gzip": 24,
    "id": "app",
    "size": 50,
  },
]
`;

exports[`detects added file between baseline and current > compare 1`] = `
[
  {
    "brotli": {
      "difference": 10,
      "newSize": 21,
      "oldSize": 11,
    },
    "gzip": {
      "difference": 23,
      "newSize": 47,
      "oldSize": 24,
    },
    "id": "app",
    "name": "app",
    "newFiles": [
      {
        "brotli": 11,
        "filename": "dist/app.js",
        "gzip": 24,
        "size": 50,
      },
      {
        "brotli": 10,
        "filename": "dist/vendor.js",
        "gzip": 23,
        "size": 30,
      },
    ],
    "oldFiles": [
      {
        "brotli": 11,
        "filename": "dist/app.js",
        "gzip": 24,
        "size": 50,
      },
    ],
    "raw": {
      "difference": 30,
      "newSize": 80,
      "oldSize": 50,
    },
    "status": "updated",
  },
]
`;

exports[`detects added file between baseline and current > current 1`] = `
[
  {
    "brotli": 21,
    "bundle": "app",
    "files": [
      {
        "brotli": 11,
        "filename": "dist/app.js",
        "gzip": 24,
        "size": 50,
      },
      {
        "brotli": 10,
        "filename": "dist/vendor.js",
        "gzip": 23,
        "size": 30,
      },
    ],
    "gzip": 47,
    "id": "app",
    "size": 80,
  },
]
`;

exports[`detects removed bundle via config change > base 1`] = `
[
  {
    "brotli": 11,
    "bundle": "app",
    "files": [
      {
        "brotli": 11,
        "filename": "dist/app/app.js",
        "gzip": 24,
        "size": 100,
      },
    ],
    "gzip": 24,
    "id": "app",
    "size": 100,
  },
  {
    "brotli": 11,
    "bundle": "lib",
    "files": [
      {
        "brotli": 11,
        "filename": "dist/lib/lib.js",
        "gzip": 24,
        "size": 200,
      },
    ],
    "gzip": 24,
    "id": "lib",
    "size": 200,
  },
]
`;

exports[`detects removed bundle via config change > compare 1`] = `
[
  {
    "brotli": {
      "difference": 0,
      "newSize": 11,
      "oldSize": 11,
    },
    "gzip": {
      "difference": 0,
      "newSize": 24,
      "oldSize": 24,
    },
    "id": "app",
    "name": "app",
    "newFiles": [
      {
        "brotli": 11,
        "filename": "dist/app/app.js",
        "gzip": 24,
        "size": 100,
      },
    ],
    "oldFiles": [
      {
        "brotli": 11,
        "filename": "dist/app/app.js",
        "gzip": 24,
        "size": 100,
      },
    ],
    "raw": {
      "difference": 0,
      "newSize": 100,
      "oldSize": 100,
    },
    "status": "updated",
  },
  {
    "brotli": {
      "difference": -11,
      "newSize": 0,
      "oldSize": 11,
    },
    "gzip": {
      "difference": -24,
      "newSize": 0,
      "oldSize": 24,
    },
    "id": "lib",
    "name": "lib",
    "newFiles": [],
    "oldFiles": [
      {
        "brotli": 11,
        "filename": "dist/lib/lib.js",
        "gzip": 24,
        "size": 200,
      },
    ],
    "raw": {
      "difference": -200,
      "newSize": 0,
      "oldSize": 200,
    },
    "status": "removed",
  },
]
`;

exports[`detects removed bundle via config change > current 1`] = `
[
  {
    "brotli": 11,
    "bundle": "app",
    "files": [
      {
        "brotli": 11,
        "filename": "dist/app/app.js",
        "gzip": 24,
        "size": 100,
      },
    ],
    "gzip": 24,
    "id": "app",
    "size": 100,
  },
]
`;

exports[`detects removed file between baseline and current > base 1`] = `
[
  {
    "brotli": 21,
    "bundle": "app",
    "files": [
      {
        "brotli": 11,
        "filename": "dist/app.js",
        "gzip": 24,
        "size": 50,
      },
      {
        "brotli": 10,
        "filename": "dist/vendor.js",
        "gzip": 23,
        "size": 30,
      },
    ],
    "gzip": 47,
    "id": "app",
    "size": 80,
  },
]
`;

exports[`detects removed file between baseline and current > compare 1`] = `
[
  {
    "brotli": {
      "difference": -10,
      "newSize": 11,
      "oldSize": 21,
    },
    "gzip": {
      "difference": -23,
      "newSize": 24,
      "oldSize": 47,
    },
    "id": "app",
    "name": "app",
    "newFiles": [
      {
        "brotli": 11,
        "filename": "dist/app.js",
        "gzip": 24,
        "size": 50,
      },
    ],
    "oldFiles": [
      {
        "brotli": 11,
        "filename": "dist/app.js",
        "gzip": 24,
        "size": 50,
      },
      {
        "brotli": 10,
        "filename": "dist/vendor.js",
        "gzip": 23,
        "size": 30,
      },
    ],
    "raw": {
      "difference": -30,
      "newSize": 50,
      "oldSize": 80,
    },
    "status": "updated",
  },
]
`;

exports[`detects removed file between baseline and current > current 1`] = `
[
  {
    "brotli": 11,
    "bundle": "app",
    "files": [
      {
        "brotli": 11,
        "filename": "dist/app.js",
        "gzip": 24,
        "size": 50,
      },
    ],
    "gzip": 24,
    "id": "app",
    "size": 50,
  },
]
`;

exports[`handles empty bundles gracefully > base 1`] = `
[
  {
    "brotli": 0,
    "bundle": "empty",
    "files": [],
    "gzip": 0,
    "id": "empty",
    "size": 0,
  },
]
`;

exports[`handles empty bundles gracefully > compare 1`] = `
[
  {
    "brotli": {
      "difference": 0,
      "newSize": 0,
      "oldSize": 0,
    },
    "gzip": {
      "difference": 0,
      "newSize": 0,
      "oldSize": 0,
    },
    "id": "empty",
    "name": "empty",
    "newFiles": [],
    "oldFiles": [],
    "raw": {
      "difference": 0,
      "newSize": 0,
      "oldSize": 0,
    },
    "status": "updated",
  },
]
`;

exports[`handles empty bundles gracefully > current 1`] = `
[
  {
    "brotli": 0,
    "bundle": "empty",
    "files": [],
    "gzip": 0,
    "id": "empty",
    "size": 0,
  },
]
`;

exports[`reports no differences for identical bundles > base 1`] = `
[
  {
    "brotli": 11,
    "bundle": "app",
    "files": [
      {
        "brotli": 11,
        "filename": "dist/app.js",
        "gzip": 24,
        "size": 100,
      },
    ],
    "gzip": 24,
    "id": "app",
    "size": 100,
  },
]
`;

exports[`reports no differences for identical bundles > compare 1`] = `
[
  {
    "brotli": {
      "difference": 0,
      "newSize": 11,
      "oldSize": 11,
    },
    "gzip": {
      "difference": 0,
      "newSize": 24,
      "oldSize": 24,
    },
    "id": "app",
    "name": "app",
    "newFiles": [
      {
        "brotli": 11,
        "filename": "dist/app.js",
        "gzip": 24,
        "size": 100,
      },
    ],
    "oldFiles": [
      {
        "brotli": 11,
        "filename": "dist/app.js",
        "gzip": 24,
        "size": 100,
      },
    ],
    "raw": {
      "difference": 0,
      "newSize": 100,
      "oldSize": 100,
    },
    "status": "updated",
  },
]
`;

exports[`reports no differences for identical bundles > current 1`] = `
[
  {
    "brotli": 11,
    "bundle": "app",
    "files": [
      {
        "brotli": 11,
        "filename": "dist/app.js",
        "gzip": 24,
        "size": 100,
      },
    ],
    "gzip": 24,
    "id": "app",
    "size": 100,
  },
]
`;

exports[`reports size increase when file grows > base 1`] = `
[
  {
    "brotli": 11,
    "bundle": "app",
    "files": [
      {
        "brotli": 11,
        "filename": "dist/app.js",
        "gzip": 24,
        "size": 100,
      },
    ],
    "gzip": 24,
    "id": "app",
    "size": 100,
  },
]
`;

exports[`reports size increase when file grows > compare 1`] = `
[
  {
    "brotli": {
      "difference": 0,
      "newSize": 11,
      "oldSize": 11,
    },
    "gzip": {
      "difference": 0,
      "newSize": 24,
      "oldSize": 24,
    },
    "id": "app",
    "name": "app",
    "newFiles": [
      {
        "brotli": 11,
        "filename": "dist/app.js",
        "gzip": 24,
        "size": 160,
      },
    ],
    "oldFiles": [
      {
        "brotli": 11,
        "filename": "dist/app.js",
        "gzip": 24,
        "size": 100,
      },
    ],
    "raw": {
      "difference": 60,
      "newSize": 160,
      "oldSize": 100,
    },
    "status": "updated",
  },
]
`;

exports[`reports size increase when file grows > current 1`] = `
[
  {
    "brotli": 11,
    "bundle": "app",
    "files": [
      {
        "brotli": 11,
        "filename": "dist/app.js",
        "gzip": 24,
        "size": 160,
      },
    ],
    "gzip": 24,
    "id": "app",
    "size": 160,
  },
]
`;

exports[`respects exclude patterns in config > base 1`] = `
[
  {
    "brotli": 11,
    "bundle": "app",
    "files": [
      {
        "brotli": 11,
        "filename": "dist/app.js",
        "gzip": 24,
        "size": 50,
      },
    ],
    "gzip": 24,
    "id": "app",
    "size": 50,
  },
]
`;

exports[`respects exclude patterns in config > compare 1`] = `
[
  {
    "brotli": {
      "difference": 0,
      "newSize": 11,
      "oldSize": 11,
    },
    "gzip": {
      "difference": 0,
      "newSize": 24,
      "oldSize": 24,
    },
    "id": "app",
    "name": "app",
    "newFiles": [
      {
        "brotli": 11,
        "filename": "dist/app.js",
        "gzip": 24,
        "size": 50,
      },
    ],
    "oldFiles": [
      {
        "brotli": 11,
        "filename": "dist/app.js",
        "gzip": 24,
        "size": 50,
      },
    ],
    "raw": {
      "difference": 0,
      "newSize": 50,
      "oldSize": 50,
    },
    "status": "updated",
  },
]
`;

exports[`respects exclude patterns in config > current 1`] = `
[
  {
    "brotli": 11,
    "bundle": "app",
    "files": [
      {
        "brotli": 11,
        "filename": "dist/app.js",
        "gzip": 24,
        "size": 50,
      },
    ],
    "gzip": 24,
    "id": "app",
    "size": 50,
  },
]
`;
